# CycleGraph

./: .dockerignore  .gitignore  .verify273.txt  Dockerfile  IntresenterCycleGraph.xlsx  LICENSE  MARKETING_ELEVATOR_PITCH.md  MARKET_PLAN.md  Masterplan.md  NEW_ProfilePage.txt  Nedlastinger - Snarvei.lnk  PROJECT_PLAN.md  README.md  Systemtest_MedLog.txt  TECH_DIFFERENTIATION.md  _debug_openapi.json  _list_routes.py  _list_routes_all.py  app.py  app.py.bak_routerfix  cg_analyze_15254984802.txt  cg_listall_20260125_121520.json  check_import.py  config.toml  conftest.py  cookies_A.txt  debug_analyze_16127771071.json  debug_sessions_list.json  eff.csv  env_check.py  fly.toml  list.json  logs.txt  mini_payload.json  one.json  openapi.json  openapi.tmp.json  openapi_5175.json  package-lock.json  package.json  (+25 more)
.cargo/: config.toml
.vercel/: project.json
Main_doc/: API_REFERENCE.md  ARCHITECTURE.md  CHATGPT_DAILY_START_SCRIPT.md  DAILY_SPRINT_TEMPLATE.md  DAY_01_FERDIG_MANUS.md  DYNAMISK_DOD.md  PROJECT_HISTORY.md  SPRINT_BACKLOG.md  SPRINT_WORKFLOW_GUIDE.md  TECHNICAL_DEBT.md  WorkflowSprintReleaseMarch_2026.txt  sprint_backlog_updated.txt
_debug/: .~lock.arrays_15908409437.csv#  .~lock.arrays_16262232459.csv#  .~lock.arrays_16311219004.csv#  arrays_15908409437.csv  arrays_16127771071.csv  arrays_16262232459.csv  arrays_16279854313.csv  arrays_16311219004.csv  pw_take3_summary.csv  result_15908409437.json  result_16077776774.json  result_16127771071.json  result_16127771071_direct.json  result_16192415203.json  result_16231049823.json  result_16262232459.json  result_16279854313.json  result_16311219004.json  result_16333270450.json  result_16342459294.json  result_16381383185.json  result_16396031026.json  result_16405483541.json  result_16454599112.json  result_16473718378.json  result_16530586366.json  result_16597678157.json  result_16657225215.json  result_16712572748.json  result_16743906198.json  session_11968722741.json  session_12172270701.json  session_14942774174.json  session_16077776774.json  session_16127771071.json  session_16184045158.json  session_16279854313.json  session_16311219004.json  session_16473718378.json  session_16530586366.json  (+8 more)
_debug_NoWeather/: result_16127771071.json  result_16262232459.json  result_16279854313.json  result_16311219004.json  result_16333270450.json  result_16342459294.json  result_16381383185.json  result_16396031026.json  result_16405483541.json  session_16127771071.json  session_16262232459.json  session_16279854313.json  session_16311219004.json  session_16333270450.json  session_16342459294.json  session_16381383185.json  session_16396031026.json  session_16405483541.json  summary_NoWeather.csv
_debug_WithWeather/: result_16127771071.json  result_16262232459.json  result_16279854313.json  result_16311219004.json  result_16333270450.json  result_16342459294.json  result_16381383185.json  result_16396031026.json  result_16405483541.json  session_16127771071.json  session_16262232459.json  session_16279854313.json  session_16311219004.json  session_16333270450.json  session_16342459294.json  session_16381383185.json  session_16396031026.json  session_16405483541.json  summary_WithWeather.csv
_safe_backup/: pre_push_patch.diff
cli/: __init__.py  __main__.py  analyze.py  bridge.py  clean_csv.py  config.example.json  config.py  csv_to_rdf.py  diagnose_data.py  eff_calc.py  efficiency.py  efficiency_report.py  fetch_weather.py  filter_csv.py  filter_valid_rows.py  find_hr_watts_candidates.py  find_streams_with_hr_watts.py  find_valid_weather.py  io.py  parser.py  profile.py  profile_binding.py  publish.py  publish_legacy.py  rust_bindings.py  session.py  (+16 more)
core/: Cargo.toml  README.md  profile.json
core/src/: analyze_session.rs  analyzer.rs  calibration.rs  cgs.rs  cli.rs  defaults.rs  lib.rs  metrics.rs  models.rs  physics.rs  pyproject.toml  smoothing.rs  storage.rs  types.rs  weather.rs  weather_api.rs
core/src/py/: mod.rs
core/tests/: analyzer_no_watt.rs  metrics_smoke.rs  test_analyze_session.py  test_analyze_session.rs  test_calib_storage.rs  test_calibration.rs  test_cli.rs  test_crr.rs  test_physics.rs  test_publish_formatter.py  test_publish_to_strava.py  test_smoothing.rs  test_storage.rs  test_storage_logging.rs  test_strava_client.py  test_strava_publish.py  w_per_beat.rs
core/tests/golden/data/: sess01_streams.csv  sess02_streams.csv
core/tests/golden/expected/: sess01_expected.json  sess02_expected.json  sess03_expected.json
core/tests/tests/: test_smoothing.rs  w_per_beat.rs
(+3535 files in other folders)
