[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cyclegraph"
version = "0.1.0"
description = "CycleGraph CLI + Rust core bindings"
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["cli"]  # finner pakken 'cli' (og underpakker)
