[package]
name = "cyclegraph_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CycleGraph core (Rust+pyo3) for analysis metrics and CGS scoring"
readme = "../README.md"

[lib]
# Vær eksplisitt på lib-navnet (matcher Python-modul & #[pymodule])
name = "cyclegraph_core"
# Bygg både rlib (for cargo test) og cdylib (for Python wheel)
crate-type = ["cdylib", "rlib"]

[features]
# Aktiver Python extension-modus KUN når vi bygger wheel
python = ["pyo3/extension-module","pyo3/abi3-py39"]
default = []

[dependencies]
# Ikke ha "extension-module" her — styres av feature over
# Sett abi3 her så maturin lett ser ABI-støtte uansett
pyo3 = { version = "0.20", features = ["abi3"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
once_cell = "1.18"
prometheus = "0.13"
ordered-float = "2.1"
chrono = { version = "0.4", features = ["serde", "clock"] }
[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
thiserror = "1"
anyhow = "1"

[profile.release]
lto = "thin"
codegen-units = 1
