[package]
name = "cyclegraph_core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "CycleGraph core (Rust+pyo3) for analysis metrics and CGS scoring"
readme = "../README.md"

[lib]
# Vær eksplisitt på lib-navnet (matcher Python-modul & #[pymodule])
name = "cyclegraph_core"
# Bygg både rlib (for cargo test) og cdylib (for Python wheel)
crate-type = ["cdylib", "rlib"]

[features]
# Aktiver Python extension-modus KUN når vi bygger wheel
python = ["pyo3/extension-module","pyo3/abi3-py39"]
default = []

[dependencies]
# PyO3 – ikke ha "extension-module" her; styres av feature over
pyo3 = { version = "0.20", features = ["abi3"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

thiserror = "1.0"
anyhow = "1"                      # beholdt her hvis du bruker anyhow i lib

log = "0.4"
once_cell = "1.18"
prometheus = "0.13"
ordered-float = "2.1"



chrono = { version = "0.4", features = ["serde", "clock"] }

# HTTP-klient for weather_api.rs (blocking, uten tokio/hyper)
ureq = { version = "2.9", features = ["json", "tls"] }

[dev-dependencies]
csv = "1.3"

[profile.release]
lto = "thin"
codegen-units = 1
